--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -35,7 +35,7 @@ nav .navbar-nav li a:hover{
 }
 /* home photo */
 .home-photo {
-    background-image: url('assets/images/home-wallpaper.jpg');
+    background-image: url('../assets/images/home-wallpaper.jpg');
     height: 100%; 
     background-attachment: fixed;
     background-position: center;
@@ -43,7 +43,7 @@ nav .navbar-nav li a:hover{
     background-size: cover;
 }
 .home-shop-now-btn {
-    height: 300px;
+    height: 310px;
     position: relative;
 }
 .vertical-center {
